[package]
name = "bs2x-pac"
version = "0.1.0"
edition = "2024"
description = "Peripheral Access Crate for HiSilicon BS21/BS2X (RISC-V, BLE 5.4 + SLE/NearLink) — generated via svd2rust from bs2x-svd"
license = "MIT"
repository = "https://github.com/hispark-rs/bs2x-pac"
keywords = ["bs21", "bs2x", "hisilicon", "riscv", "svd2rust"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
critical-section = { version = "1", optional = true }
vcell = "0.1"

# The `riscv` crate (and its riscv-pac dep) only builds for riscv targets. The
# generated `interrupt` module's riscv-lib re-exports + the `#[riscv::pac_enum]`
# impl on `ExternalInterrupt` are cfg-gated to riscv32 (see bs2x-svd/postprocess.py),
# so on host the crate compiles without `riscv` — letting hisi-riscv-hal host-test.
[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.13"

[features]
default = ["critical-section"]
rt = []

[profile.release]
opt-level = "s"
lto = true
